<resources>
    <string name="app_name">Car Maintenance Tracker</string>
    <string name="dashboard_name">Car Maintenance Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="button_send">Send</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_dashboard_text">Back</string>
    <string name="edit_name">Enter name</string>
    <string name="nav_drawer_add_vehicle">Add New Vehicle</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="carMakeTextView">Make</string>
    <string name="carModelTextView">Model</string>
    <string name="carYearTextView">Year</string>
    <string name="addNewVehicleTextView">Add a New Vehicle</string>
    <string name="cancel_button">Cancel</string>
    <string name="my_car">2003 Honda Accord</string>
    <string name="fab_add_vehicle_desc">fab_add_vehicle</string>
    <string name="add_gas_test_key">add_gas_test</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_drawer_select_vehicle">Select Vehicle</string>
    <string name="header_text_content">Car Maintenance Tracker</string>
    <string name="nav_drawer_dashboard">Dashboard</string>
    <string name="example_car_name">2003 Honda Accord</string>
    <string name="buttonSaveAddVehicle">Save</string>
    <string name="gas_entry_overview_ppg_label">Price/Gallon:</string>
    <string name="gas_entry_overview_cost_label">Total Cost:</string>
    <string name="gas_entry_overview_gallons_label">Gallons:</string>
    <string name="gas_entry_overview_mileage_label">Odometer:</string>
    <string name="gas_entry_overview_date_label">Date:</string>
    <string name="dashboard_mileage_label">Mileage:</string>
    <string name="fab_add_gas_desc">fab_add_gas</string>
    <string name="fab_add_service_desc">fab_add_service</string>
    <string name="fab_add_mileage_desc">fab_add_mileage</string>
    <string name="fab_add_main_desc">fab_add_main</string>
    <string name="nav_drawer_services_overview">Services Overview</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="service_entry_overview_date_label">Date:</string>
    <string name="service_entry_overview_cost_label">Total Cost:</string>
    <string name="menu_add">Add</string>
    <string name="action_about">About</string>
    <string name="nav_drawer_about">About</string>
</resources>