<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_dashboard"
            android:icon="@drawable/outline_home_24"
            android:title="@string/nav_drawer_dashboard"/>
        <item
            android:id="@+id/nav_drawer_add_vehicle"
            android:icon="@drawable/baseline_add_20"
            android:title="@string/nav_drawer_add_vehicle" />
        <item
            android:id="@+id/nav_drawer_select_vehicle"
            android:icon="@drawable/baseline_directions_car_24"
            android:title="@string/nav_drawer_select_vehicle" />
        <item
            android:id="@+id/nav_drawer_services_overview"
            android:icon="@drawable/outline_build_24"
            android:title="@string/nav_drawer_services_overview" />
    </group>
</menu>