<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/style_background"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/gas_entry_overview_card_view">

        <TextView
            android:id="@+id/gasEntryOverviewDateLabel"
            style="@style/style_gas_entry_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:text="@string/gas_entry_overview_date_label" />

        <TextView
            android:id="@+id/gasEntryOverviewDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/style_gas_entry_text"
            android:text="TextView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/gas_entry_overview_card_view">

        <TextView
            android:id="@+id/gasEntryOverviewMileageLabel"
            style="@style/style_gas_entry_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:text="@string/gas_entry_overview_mileage_label" />

        <TextView
            android:id="@+id/gasEntryOverviewMileageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/style_gas_entry_text"
            android:text="TextView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/gas_entry_overview_card_view">

        <TextView
            android:id="@+id/gasEntryOverviewGallonsLabel"
            style="@style/style_gas_entry_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:text="@string/gas_entry_overview_gallons_label" />

        <TextView
            android:id="@+id/gasEntryOverviewGallonsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/style_gas_entry_text"
            android:text="TextView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/gas_entry_overview_card_view">

        <TextView
            android:id="@+id/gasEntryOverviewCostLabel"
            style="@style/style_gas_entry_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:text="@string/gas_entry_overview_cost_label" />

        <TextView
            android:id="@+id/gasEntryOverviewCostText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/style_gas_entry_text"
            android:text="TextView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/gas_entry_overview_card_view">

        <TextView
            android:id="@+id/gasEntryOverviewPpgLabel"
            style="@style/style_gas_entry_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:text="@string/gas_entry_overview_ppg_label" />

        <TextView
            android:id="@+id/gasEntryOverviewPpgText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/style_gas_entry_text"
            android:text="TextView" />

    </androidx.cardview.widget.CardView>

</LinearLayout>